feat: about section introduced

--- a/Views/index.html
+++ b/Views/index.html
@@ -1,11 +1,123 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>FarmFresh</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/Vendor/aos/aos.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
 </head>
+
 <body>
-    
+    <header class="header fixed-top">
+        <nav class="navbar navbar-expand-lg shadow z-5">
+            <div class="container">
+                <a href="" class="navbar-brand fw-bold">FI Shop</a>
+                <ul class="navbar-nav nav-underline mx-auto">
+                    <li class="nav-item mx-3"><a href="" class="nav-link active">Home</a></li>
+                    <li class="nav-item mx-3"><a href="" class="nav-link">About</a></li>
+                    <li class="nav-item mx-3"><a href="" class="nav-link">Gallery</a></li>
+                    <li class="nav-item mx-3"><a href="" class="nav-link">Contact Us</a></li>
+                </ul>
+            </div>
+        </nav>
+    </header>
+    <div class="banner">
+        <div class="container position-relative">
+            <div class="row">
+                <div class="col-md-5 d-md-flex flex-column my-md-auto">
+                    <h1>Hello to farm fresh Site</h1>
+                    <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam, id facere! Fugiat
+                        vero officiis <qoute>ipsum doloremque at praesentium</qoute>, fugit esse!</p>
+                </div>
+                <div class="col-md-7">
+                    <img class="p-3 d-flex ms-auto"
+                        src="https://www.pngarts.com/files/11/Mix-Fruit-Transparent-Image.png" alt="" width="500"
+                        height="500">
+                </div>
+            </div>
+        </div>
+
+        <div class="services position-relative">
+            <div class="container position-relative">
+                <div class="row gy-4 mt-5 justify-content-center ">
+                    <div class="service-card rounded-4 shadow col-3 g-0 overflow-hidden border-box mx-2"
+                        data-aos="fade-up" data-aos-delay="100">
+                        <div class="service-card-img p-4 text-center">
+                            <img class="img-fluid" src="https://freepngimg.com/thumb/fruit/6-2-fruit-png-picture.png"
+                                width="130" height="130" alt="">
+                        </div>
+                        <div class="m-3">
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam, eaque?</p>
+                        </div>
+                    </div>
+
+                    <div class="service-card rounded-4 shadow col-3 g-0 overflow-hidden border-box mx-2"
+                        data-aos="fade-up" data-aos-delay="125">
+                        <div class="service-card-img p-4 text-center">
+                            <img class="img-fluid" src="https://freepngimg.com/thumb/fruit/6-2-fruit-png-picture.png"
+                                width="130" height="130" alt="">
+                        </div>
+                        <div class="m-3">
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam, eaque?</p>
+                        </div>
+                    </div>
+                    <div class="service-card rounded-4 shadow col-3 g-0 overflow-hidden border-box mx-2"
+                        data-aos="fade-up" data-aos-delay="150">
+                        <div class="service-card-img p-4 text-center">
+                            <img class="img-fluid" src="https://freepngimg.com/thumb/fruit/6-2-fruit-png-picture.png"
+                                width="130" height="130" alt="">
+                        </div>
+                        <div class="m-3">
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam, eaque?</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <main>
+        <div class="about-section section">
+            <div class="container">
+                <div class="section-header">
+                    <h2 class="text-center position-relative pb-3 mb-3  ">About Us</h2>
+                    <p class="my-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius qui neque,
+                        necessitatibus iusto mollitia at consectetur nihil! Quidem ex, delectus ratione eum, eveniet
+                        similique voluptates magnam ullam nisi provident ut iure quos! Amet optio debitis eos voluptatum
+                        architecto, neque quod!</p>
+                </div>
+
+                <div class="row my-3 gx-5">
+                    <div class="col-md-6">
+                        <h3>Lorem ipsum dolor sit amet. Lorem, ipsum. Lorem, ipsum.</h3>
+                        <img class="img-fluid rounded-4 my-3"
+                            src="https://cdn-prod.medicalnewstoday.com/content/images/articles/308/308796/mixed-fruits.jpg"
+                            alt="">
+                        <p class="">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus labore
+                            reiciendis inventore sit quaerat ducimus vero, omnis soluta delectus esse?</p>
+                    </div>
+                    <div class="col-md-6 d-flex flex-column">
+                        <h3 class="">Lorem, ipsum.</h3>                     
+                        <p class="">Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat ullam neque rerum vel id. Itaque laboriosam tempore culpa quia maxime.<br>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod nam, magni consequuntur dolore </p>
+                        <div class="position-relative mt-auto">
+                            <img class="img-fluid rounded-4 opacity-75"
+                                src="https://www.freshproduce.com/siteassets/images/large-tile-images/cartonsoffruit.jpg"
+                                alt="">
+                            <a href="" class="btn btn-outline-light position-absolute top-50 start-50  "><i class="bi bi-play-circle"></i></a>
+                    </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </main>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
+        crossorigin="anonymous"></script>
+    <script src="/Vendor/aos/aos.js"></script>
 </body>
+
 </html>
