--- a/Views/index.html
+++ b/Views/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="/css/style.css">
     <link rel="stylesheet" href="/Vendor/aos/aos.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+    
 </head>
 
 <body>
@@ -112,6 +113,111 @@
                     </div>
                 </div>
             </div>
+        </div>
+        
+        <div class="stats-counter section">
+            <div class="container">
+                <div class="row gy-4 align-items-center">
+                    <div class="col-md-6 text-center">
+                        <img class="img-fluid" src="https://cdn.pixabay.com/photo/2012/04/26/12/52/orange-42395_1280.png" width="400" height="400" alt="">
+                    </div>
+                    <div class="col-md-6">
+                        <div class="stats-item d-flex align-items-center py-4 border-bottom">
+                            <h1 class="m-0 mx-2">432</h1>
+                            <p class="m-0 "><strong>Lorem, ipsum.</strong>Lorem ipsum dolor sit amet consectetur.</p>
+                        </div>
+
+                        <div class="stats-item d-flex align-items-center py-4 border-bottom">
+                            <h1 class="m-0 mx-2">432</h1>
+                            <p class="m-0 "><strong>Lorem, ipsum.</strong>Lorem ipsum dolor sit amet consectetur.</p>
+                        </div>
+
+                        <div class="stats-item d-flex align-items-center py-4 border-bottom">
+                            <h1 class="m-0 mx-2">432</h1>
+                            <p class="m-0 "><strong>Lorem, ipsum.</strong>Lorem ipsum dolor sit amet consectetur.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="testimonial-section section py-4">
+
+            <div class="container">
+                <div class="section-header">
+                   <h2 class="text-center position-relative pb-3 mb-3 ">Our Services</h2>
+                </div>
+
+                <div class="services row gy-4 mt-3">
+                    <div class="col-lg-4 px-4 mt-3">
+                        <div class="service-item">
+                            <div class="icon">
+                                <i class="bi bi-activity"></i>
+                            </div>
+                            <h3>Nesciunt Mete</h3>
+                            <p>Provident nihil minus qui consequatur non omnis maiores. Eos accusantium minus dolores iure perferendis tempore et consequatur.</p>
+                            <a href="#" class="stretched-link">Read more <i class="bi bi-arrow-right"></i></a>
+                        </div>
+                    </div>
+
+                    <div class="col-lg-4 px-4 mt-3">
+                        <div class="service-item">
+                            <div class="icon">
+                                <i class="bi bi-activity"></i>
+                            </div>
+                            <h3>Nesciunt Mete</h3>
+                            <p>Provident nihil minus qui consequatur non omnis maiores. Eos accusantium minus dolores iure perferendis tempore et consequatur.</p>
+                            <a href="#" class="stretched-link">Read more <i class="bi bi-arrow-right"></i></a>
+                        </div>
+                    </div>
+
+                    <div class="col-lg-4 px-4 mt-3">
+                        <div class="service-item">
+                            <div class="icon">
+                                <i class="bi bi-activity"></i>
+                            </div>
+                            <h3>Nesciunt Mete</h3>
+                            <p>Provident nihil minus qui consequatur non omnis maiores. Eos accusantium minus dolores iure perferendis tempore et consequatur.</p>
+                            <a href="#" class="stretched-link">Read more <i class="bi bi-arrow-right"></i></a>
+                        </div>
+                    </div>
+
+                    <div class="col-lg-4 px-4 mt-3">
+                        <div class="service-item">
+                            <div class="icon">
+                                <i class="bi bi-activity"></i>
+                            </div>
+                            <h3>Nesciunt Mete</h3>
+                            <p>Provident nihil minus qui consequatur non omnis maiores. Eos accusantium minus dolores iure perferendis tempore et consequatur.</p>
+                            <a href="#" class="stretched-link">Read more <i class="bi bi-arrow-right"></i></a>
+                        </div>
+                    </div>
+
+                    <div class="col-lg-4 px-4 mt-3">
+                        <div class="service-item">
+                            <div class="icon">
+                                <i class="bi bi-activity"></i>
+                            </div>
+                            <h3>Nesciunt Mete</h3>
+                            <p>Provident nihil minus qui consequatur non omnis maiores. Eos accusantium minus dolores iure perferendis tempore et consequatur.</p>
+                            <a href="#" class="stretched-link">Read more <i class="bi bi-arrow-right"></i></a>
+                        </div>
+                    </div>
+
+                    <div class="col-lg-4 px-4 mt-3">
+                        <div class="service-item">
+                            <div class="icon">
+                                <i class="bi bi-activity"></i>
+                            </div>
+                            <h3>Nesciunt Mete</h3>
+                            <p>Provident nihil minus qui consequatur non omnis maiores. Eos accusantium minus dolores iure perferendis tempore et consequatur.</p>
+                            <a href="#" class="stretched-link">Read more <i class="bi bi-arrow-right"></i></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+
         </div>
     </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
