--- a/css/style.css
+++ b/css/style.css
@@ -29,7 +29,7 @@ header{
 .section{
   margin: 4rem 0;
 }
-.about-section h2::after{
+.section-header h2::after{
 content: "";
 position: absolute;
 display: block;
@@ -40,4 +40,62 @@ left: 0;
 bottom: 0;
 margin:auto;
 background-color: rgb(36, 9, 9);
+}
+
+.service-item{
+  background-color: rgb(247, 242, 232);
+  padding: 40px;
+  border-radius: 10px;
+  height: 100%;
+}
+
+.services .service-item .icon {
+  width: 48px;
+  height: 48px;
+  position: relative;
+  margin-bottom: 50px;
+}
+
+.services .service-item .icon i {
+  color: black;
+  font-size: 56px;
+  transition: ease-in-out 0.3s;
+  z-index: 2;
+  position: relative;
+}
+
+.services .service-item .icon::before{
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  z-index: 1;
+  top: 10px;
+  right: -20px;
+  background-color: white;
+  transition: 0.3s;
+}
+
+.services .service-item h3 {
+  color: black;
+  font-weight: 700;
+  margin: 0 0 20px 0;
+  padding-bottom: 8px;
+  font-size: 22px;
+  position: relative;
+  display: inline-block;
+  border-bottom: 4px solid #eeeeee;
+  transition: 0.3s;
+}
+.services .service-item a {
+  margin-top: 15px;
+  color: var(--color-primary);
+}
+.services .service-item:hover .icon:before {
+  background: orange;
+}
+
+.services .service-item:hover h3 {
+  border-color: orange;
 }
